src/test/deca/context/valid/inst_expr_empty.deca
// Test context, no instruction

{
    int x = 5;
    ;
}