src/test/deca/context/invalid/invalid_float_format_point_letter.deca
// Test context, invalid float format 

{
    float x = 5.a;
}